# rust-axum-test

./: Cargo.toml  README.md  client.js
src/: main.rs
