[package]
name = "rust-axum-test"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.14.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.5.1", features=["multipart", "ws", "headers"]}
headers="0.3"

async-trait = "0.1.51"
async-stream = "0.3.2"
clap = "2.33.2"